refactor : update getFirst and getLast